spring-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-deployment
  labels:
    app: spring-petclinic
spec:
  template:    
    metadata:
      name: spring-petclinic
      labels:
        app: spring-petclinic
    spec:  
      containers:       
        - name: spring-petclinic 
          image: arey/springboot-petclinic
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: /mysql
              readOnly: true  
              name: schema-sql
          readinessProbe:
            httpGet:
              path: /manage/health
              port: 8080
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /manage/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
        - name: nginx-sidecar
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: nginx-conf
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-cm
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: schema-sql
          configMap:
            name: schema-sql-cm
            items:
              - key: schema.sql 
                path: schema.sql
        - name: log
          emptyDir: {}  
  replicas: 3
  selector:
    matchLabels:
      app: spring-petclinic
