spring-petclinic-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-clusterip
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic
  ports:
   - port: 80
     targetPort: 8080
