spring-petclinic-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-nodeport
spec:
  type: NodePort
  ports: 
    - nodePort: 30100
      port: 80
      targetPort: 8080
  selector: 
    app: spring-petclinic
