spring-petclinic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-petclinic-ingress
  namespace: default
spec:
  backend:
    serviceName: spring-petclinic-nodeport
    servicePort: 80
